syntax = "proto3";

package grpcApi;
option go_package = "internal/grpcApi";

import "google/protobuf/empty.proto";

message Task {
    int64 id = 1;
    string name = 2;
    bool completed = 3;
}

message Tasks {
    repeated Task task = 1;
}

message TaskID {
    int64 id = 1;
}

message TaskCompletion {
    bool completed = 1;
}

service TaskService {
    rpc GetAllTasks(google.protobuf.Empty) returns (Tasks) {};
    rpc GetTaskByID(TaskID) returns (Task) {};
    rpc GetTasksByCompletion(TaskCompletion) returns (Tasks) {};

    rpc AddTask(Task) returns (TaskID) {};
    rpc EditTask(Task) returns (google.protobuf.Empty) {};
}